--- a/Games/word_search.html
+++ b/Games/word_search.html
@@ -27,8 +27,7 @@
       gap: var(--cell-gap);
       justify-content: center;
       margin-top: 1.5rem;
-
-      touch-action: none;
+      touch-action: none
     }
 
     .cell {
@@ -44,7 +43,7 @@
       background: #fff;
       user-select: none;
       cursor: pointer;
-      transition: background-color 0.3s ease;
+      transition: background-color .3s ease
     }
 
     .cell.drag {
@@ -57,22 +56,21 @@
       color: #fff !important
     }
 
-    /* Blinking highlight for hint */
     @keyframes blink {
 
       0%,
       100% {
-        background-color: #e6f9d6;
+        background: #e6f9d6;
       }
 
       50% {
-        background-color: #cfeeb1;
+        background: #cfeeb1;
       }
     }
 
     .cell.highlight {
       animation: blink 1s infinite;
-      color: #000 !important;
+      color: #000 !important
     }
 
     .word.badge {
@@ -88,34 +86,34 @@
       font-size: clamp(1.3rem, 6vw, 1.75rem)
     }
 
-    /* Help button styles */
+    /* Help button */
     #helpButton {
       position: fixed;
       bottom: 20px;
       right: 20px;
       width: 44px;
       height: 44px;
-      background-color: #198754;
-      color: white;
+      background: #198754;
+      color: #fff;
       font-weight: bold;
       font-size: 28px;
       border-radius: 50%;
       border: none;
       cursor: pointer;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, .2);
       display: flex;
       align-items: center;
       justify-content: center;
       user-select: none;
       z-index: 1000;
-      transition: background-color 0.3s ease;
+      transition: background-color .3s ease
     }
 
     #helpButton:hover {
-      background-color: #145c32;
+      background: #145c32
     }
 
-    /* Sticky Back Button Styles */
+    /* Back button */
     .back-btn {
       position: fixed;
       top: 1rem;
@@ -130,13 +128,13 @@
       color: #333;
       background: #fff;
       border-radius: 50%;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
-      z-index: 1000;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, .25);
+      z-index: 1000
     }
 
     .back-btn:hover {
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.35);
-      transform: translateY(-2px);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, .35);
+      transform: translateY(-2px)
     }
   </style>
 </head>
@@ -145,8 +143,7 @@
   <a href="./gamesMenu.html" class="back-btn" aria-label="Go back">&#8592;</a>
 
   <div class="container text-center py-4">
-    <h2 class="mb-3">🧩 Word Search <br /> Find me please 💖</h2>
-
+    <h2 class="mb-3">🧩 Word Search <br /> Find me please 💖</h2>
     <div id="grid" class="grid"></div>
 
     <div class="word-list mt-4">
@@ -155,9 +152,9 @@
     </div>
   </div>
 
-  <!-- Hint button -->
   <button id="helpButton" title="Highlight a random unfound word">?</button>
 
+  <!-- Win Modal -->
   <div class="modal fade" id="winModal" tabindex="-1" aria-labelledby="winModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -166,14 +163,11 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body text-center">
-          You found the missing piece of my heart. 💕 <br />
-          Here is my gift for you:
+          You found the missing piece of my heart. 💕 <br />Here is my gift for you:
         </div>
         <div class="modal-footer">
           <button class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#letterModal"
-            data-bs-dismiss="modal">
-            Open Letter
-          </button>
+            data-bs-dismiss="modal">Open Letter</button>
         </div>
       </div>
     </div>
@@ -187,38 +181,158 @@
           <h5 class="modal-title" id="letterModalLabel">A Little Note</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body text-center" id="modalBody">
-
-        </div>
+        <div class="modal-body text-center" id="modalBody"></div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button id="closeModalRefresh" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Bootstrap 5 JS (includes Popper) -->
   <script src="./bootstrap-5.3.7-dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    /* ---------- DATA ---------- */
-    const WORDS = ['JUMRYL', 'JEAN', 'MIHRA', 'SOLIVIO', 'LAO', 'LOVE', 'INFINITY'];
+    /* ---------- 1. MASTER WORD POOL ---------- */
+    const WORD_POOL = [
+      'JUMRYL', 'JEAN', 'MIHRA', 'SOLIVIO', 'LAO', 'LOVE', 'INFINITY',
+      'FOREVER', 'SMILE', 'SUNSHINE', 'HUG', 'CARE', 'PEACE', 'TRUST',
+      'DREAM', 'HOPE', 'FAITH', 'CUDDLE', 'PROMISE', 'KISS'
+    ];
+    const WORDS_PER_ROUND = 7;
+
+    /* ---------- 2. 100 % UNIQUE PICKER ---------- */
+    function chooseWords(pool, n) {
+      const used = JSON.parse(localStorage.getItem('usedWords') || '[]');
+      let unused = pool.filter(w => !used.includes(w));
+
+      /* if we’ve completely run out, wipe the history and start fresh */
+      if (unused.length === 0) {
+        localStorage.removeItem('usedWords');
+        unused = [...pool];
+      }
+
+      /* shuffle & slice — if fewer than n remain, we gracefully return fewer */
+      unused.sort(() => Math.random() - 0.5);
+      return unused.slice(0, Math.min(n, unused.length));
+    }
+    const WORDS = chooseWords(WORD_POOL, WORDS_PER_ROUND);
+
+    /* ---------- 3. GRID SET‑UP ---------- */
     const SIZE = 10,
-      DIRS = [
-        [0, 1],
-        [1, 0],
-        [1, 1],
-        [-1, 1],
-        [0, -1],
-        [-1, 0],
-        [-1, -1],
-        [1, -1]
-      ];
+      DIRS = [[0, 1], [1, 0], [1, 1], [-1, 1], [0, -1], [-1, 0], [-1, -1], [1, -1]];
     const grid = [...Array(SIZE)].map(() => Array(SIZE).fill(''));
     const rand = n => Math.floor(Math.random() * n);
 
-    /* ---------- NOTES ---------- */
-    var words = [
+    /* place the chosen words */
+    WORDS.forEach(w => {
+      while (true) {
+        const [dr, dc] = DIRS[rand(DIRS.length)];
+        const r0 = rand(SIZE), c0 = rand(SIZE);
+        const rE = r0 + dr * (w.length - 1), cE = c0 + dc * (w.length - 1);
+        if (rE < 0 || rE >= SIZE || cE < 0 || cE >= SIZE) continue;
+        if ([...w].some((ch, i) => { const r = r0 + dr * i, c = c0 + dc * i; return grid[r][c] && grid[r][c] !== ch; })) continue;
+        [...w].forEach((ch, i) => grid[r0 + dr * i][c0 + dc * i] = ch);
+        break;
+      }
+    });
+    const ALPHA = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+    for (let r = 0; r < SIZE; r++)for (let c = 0; c < SIZE; c++)if (!grid[r][c]) grid[r][c] = ALPHA[rand(ALPHA.length)];
+
+    /* ---------- 4. RENDERING ---------- */
+    const gEl = document.getElementById('grid'), wEl = document.getElementById('wordList');
+    function cellDiv(r, c, ch) {
+      const d = document.createElement('div');
+      d.className = 'cell'; d.textContent = ch; d.dataset.r = r; d.dataset.c = c;
+      return d;
+    }
+    function render() {
+      gEl.innerHTML = ''; wEl.innerHTML = '';
+      grid.forEach((row, r) => row.forEach((ch, c) => gEl.appendChild(cellDiv(r, c, ch))));
+      WORDS.forEach(w => wEl.insertAdjacentHTML('beforeend',
+        `<span id="w-${w}" class="word badge bg-secondary text-light p-2">${w}</span>`));
+    }
+    render();
+
+    /* ---------- 5. DRAG ENGINE ---------- */
+    let start = null, path = [], found = new Set();
+    const cellFromEl = el => ({ el, row: +el.dataset.r, col: +el.dataset.c, chr: el.textContent });
+    gEl.addEventListener('pointerdown', e => {
+      const cell = e.target.closest('.cell'); if (!cell) return;
+      start = cellFromEl(cell); path = [start]; cell.classList.add('drag');
+      e.target.setPointerCapture(e.pointerId); e.preventDefault();
+    });
+    const pointerMove = e => {
+      if (!start) return; e.preventDefault();
+      const el = document.elementFromPoint(e.clientX, e.clientY);
+      if (!el?.classList.contains('cell')) return;
+      buildPath(cellFromEl(el));
+    };
+    gEl.addEventListener('pointermove', pointerMove);
+    window.addEventListener('pointermove', pointerMove);
+    window.addEventListener('pointerup', () => { if (!start) return; validate(); clearDrag(); });
+
+    function clearDrag() { path.forEach(c => c.el.classList.remove('drag')); path = []; start = null; }
+    function buildPath(curr) {
+      const { row: r0, col: c0 } = start, { row: r1, col: c1 } = curr;
+      const dr = Math.sign(r1 - r0), dc = Math.sign(c1 - c0);
+      if (!dr && !dc) return; if (dr && dc && Math.abs(r1 - r0) !== Math.abs(c1 - c0)) return;
+      path.forEach(c => c.el.classList.remove('drag')); path = [];
+      for (let r = r0, c = c0; ; r += dr, c += dc) {
+        const el = document.querySelector(`.cell[data-r="${r}"][data-c="${c}"]`);
+        path.push({ el, row: r, col: c, chr: el.textContent });
+        if (r === r1 && c === c1) break;
+      }
+      path.forEach(c => c.el.classList.add('drag'));
+    }
+    function validate() {
+      if (path.length < 2) return;
+      const txt = path.map(c => c.chr).join(''), rev = [...txt].reverse().join('');
+      const word = WORDS.find(w => w === txt || w === rev);
+      if (!word || found.has(word)) return;
+      found.add(word);
+      path.forEach(c => c.el.classList.replace('drag', 'found'));
+      document.getElementById('w-' + word).classList.add('found');
+      clearHighlight();
+      if (found.size === WORDS.length) bootstrap.Modal.getOrCreateInstance('#winModal').show();
+    }
+
+    /* ---------- 6. HINT BUTTON ---------- */
+    let lastHighlight = [], highlightTimeout, isHighlighting = false;
+    function clearHighlight() {
+      if (highlightTimeout) { clearTimeout(highlightTimeout); highlightTimeout = null; }
+      lastHighlight.forEach(cell => cell.classList.remove('highlight'));
+      lastHighlight = []; isHighlighting = false;
+    }
+    function highlightRandom() {
+      if (isHighlighting) return;
+      const unfound = WORDS.filter(w => !found.has(w)); if (!unfound.length) return;
+      const word = unfound[rand(unfound.length)];
+      for (let r = 0; r < SIZE; r++)for (let c = 0; c < SIZE; c++)
+        for (const [dr, dc] of DIRS) {
+          let ok = true;
+          for (let i = 0; i < word.length; i++) {
+            const rr = r + dr * i, cc = c + dc * i;
+            if (rr < 0 || rr >= SIZE || cc < 0 || cc >= SIZE || grid[rr][cc] !== word[i]) { ok = false; break; }
+          }
+          if (ok) {
+            lastHighlight = [];
+            for (let i = 0; i < word.length; i++) {
+              const rr = r + dr * i, cc = c + dc * i;
+              const cell = document.querySelector(`.cell[data-r="${rr}"][data-c="${cc}"]`);
+              if (cell && !cell.classList.contains('found')) {
+                cell.classList.add('highlight'); lastHighlight.push(cell);
+              }
+            }
+            isHighlighting = true;
+            highlightTimeout = setTimeout(clearHighlight, 3000);
+            return;
+          }
+        }
+    }
+    document.getElementById('helpButton').addEventListener('click', highlightRandom);
+
+    /* ---------- 7. LOVE NOTES ---------- */
+    const notes = [
       'Every moment with you turns ordinary life into an extraordinary adventure.',
       'Your smile brightens even the darkest days.',
       'With you, every day feels like a beautiful surprise.',
@@ -236,238 +350,20 @@
       'You are the spark that lights up my soul.',
       'Being with you feels like the perfect dream.',
       'You make the ordinary moments extraordinary.',
-      'You make the ordinary moments extraordinary.',
       'I see my future in your eyes.',
-      'Loving you is my greatest adventure.',
+      'Loving you is my greatest adventure.'
     ];
-
-    function getRandomWord() {
-      return words[Math.floor(Math.random() * words.length)];
-    }
-    var letterModal = document.getElementById('letterModal');
-
-    letterModal.addEventListener('show.bs.modal', function () {
-      var modalBody = document.getElementById('modalBody');
-      modalBody.textContent = getRandomWord();
+    document.getElementById('letterModal').addEventListener('show.bs.modal', () => {
+      document.getElementById('modalBody').textContent = notes[rand(notes.length)];
     });
 
-    /* place words */
-    WORDS.forEach(w => {
-      while (true) {
-        const [dr, dc] = DIRS[rand(DIRS.length)];
-        const r0 = rand(SIZE),
-          c0 = rand(SIZE);
-        const rE = r0 + dr * (w.length - 1),
-          cE = c0 + dc * (w.length - 1);
-        if (rE < 0 || rE >= SIZE || cE < 0 || cE >= SIZE) continue;
-        if ([...w].some((ch, i) => {
-          const r = r0 + dr * i,
-            c = c0 + dc * i;
-          return grid[r][c] && grid[r][c] !== ch;
-        })) continue;
-        [...w].forEach((ch, i) => grid[r0 + dr * i][c0 + dc * i] = ch);
-        break;
-      }
+    /* ---------- 8. CLOSE → SAVE → RELOAD ---------- */
+    document.getElementById('closeModalRefresh').addEventListener('click', () => {
+      const used = JSON.parse(localStorage.getItem('usedWords') || '[]');
+      const updated = [...new Set([...used, ...WORDS])];
+      localStorage.setItem('usedWords', JSON.stringify(updated));
+      location.reload();
     });
-    const ALPHA = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-    for (let r = 0; r < SIZE; r++)
-      for (let c = 0; c < SIZE; c++)
-        if (!grid[r][c]) grid[r][c] = ALPHA[rand(ALPHA.length)];
-
-    /* ---------- RENDER ---------- */
-    const gEl = document.getElementById('grid');
-    const wEl = document.getElementById('wordList');
-
-    function cellDiv(r, c, chr) {
-      const d = document.createElement('div');
-      d.className = 'cell';
-      d.textContent = chr;
-      d.dataset.r = r;
-      d.dataset.c = c;
-      return d;
-    }
-
-    function render() {
-      gEl.innerHTML = '';
-      wEl.innerHTML = '';
-      grid.forEach((row, r) => row.forEach((ch, c) => gEl.appendChild(cellDiv(r, c, ch))));
-      WORDS.forEach(w => {
-        wEl.insertAdjacentHTML(
-          'beforeend',
-          `<span id="w-${w}" class="word badge bg-secondary text-light p-2">${w}</span>`
-        );
-      });
-    }
-    render();
-
-    /* ----------  DRAG ENGINE (touch‑friendly) ---------- */
-    let start = null,
-      path = [],
-      found = new Set();
-
-    function cellFromEl(el) {
-      return {
-        el,
-        row: +el.dataset.r,
-        col: +el.dataset.c,
-        chr: el.textContent
-      };
-    }
-
-    gEl.addEventListener('pointerdown', e => {
-      const cell = e.target.closest('.cell');
-      if (!cell) return;
-      start = cellFromEl(cell);
-      path = [start];
-      cell.classList.add('drag');
-      e.target.setPointerCapture(e.pointerId);
-      e.preventDefault();
-    });
-
-    function pointerMoveHandler(e) {
-      if (!start) return;
-      e.preventDefault();
-      const el = document.elementFromPoint(e.clientX, e.clientY);
-      if (!el?.classList.contains('cell'))
-        return;
-      buildPath(cellFromEl(el));
-    }
-    gEl.addEventListener('pointermove', pointerMoveHandler); /* works for mouse + touch */
-    window.addEventListener('pointermove', pointerMoveHandler); /* if finger leaves grid */
-
-    window.addEventListener('pointerup', () => {
-      if (!start)
-        return;
-      validate();
-      clearDrag();
-    });
-
-    /* ---------- helpers ---------- */
-    function clearDrag() {
-      path.forEach(c => c.el.classList.remove('drag'));
-      path = [];
-      start = null;
-    }
-
-    function buildPath(curr) {
-      const {
-        row: r0,
-        col: c0
-      } = start, {
-        row: r1,
-        col: c1
-      } = curr;
-      const dr = Math.sign(r1 - r0),
-        dc = Math.sign(c1 - c0);
-      if (!dr && !dc)
-        return;
-      if (dr && dc && Math.abs(r1 - r0) !== Math.abs(c1 - c0))
-        return;
-
-      path.forEach(c => c.el.classList.remove('drag'));
-      path = [];
-      let r = r0,
-        c = c0;
-      while (true) {
-        const el = document.querySelector(`.cell[data-r="${r}"][data-c="${c}"]`);
-        path.push({
-          el,
-          row: r,
-          col: c,
-          chr: el.textContent
-        });
-        if (r === r1 && c === c1)
-          break;
-        r += dr;
-        c += dc;
-      }
-      path.forEach(c => c.el.classList.add('drag'));
-    }
-
-    function validate() {
-      if (path.length < 2)
-        return;
-      const txt = path.map(c => c.chr).join(''),
-        rev = [...txt].reverse().join('');
-      const word = WORDS.find(w => w === txt || w === rev);
-      if (!word || found.has(word))
-        return;
-      found.add(word);
-      path.forEach(c => {
-        c.el.classList.replace('drag', 'found');
-      });
-      document.getElementById('w-' + word).classList.add('found');
-      if (found.size === WORDS.length)
-        bootstrap.Modal.getOrCreateInstance('#winModal').show();
-      clearHighlight(); // Clear highlight after finding word
-    }
-
-    // --------- NEW: Highlight random unfound word for 3 seconds blinking ---------
-    let lastHighlightCells = [];
-    let highlightTimeout;
-    let isHighlighting = false;
-
-    function clearHighlight() {
-      if (highlightTimeout) {
-        clearTimeout(highlightTimeout);
-        highlightTimeout = null;
-      }
-      lastHighlightCells.forEach(cell => {
-        cell.classList.remove('highlight');
-      });
-      lastHighlightCells = [];
-      isHighlighting = false;
-    }
-
-    function highlightRandomUnfoundWord() {
-      if (isHighlighting) return; // Prevent multiple hints at once
-
-      clearHighlight();
-
-      const unfoundWords = WORDS.filter(w => !found.has(w));
-      if (unfoundWords.length === 0) return; // all found
-
-      const word = unfoundWords[rand(unfoundWords.length)];
-
-      for (let r = 0; r < SIZE; r++) {
-        for (let c = 0; c < SIZE; c++) {
-          for (const [dr, dc] of DIRS) {
-            let match = true;
-            for (let i = 0; i < word.length; i++) {
-              const rr = r + dr * i,
-                cc = c + dc * i;
-              if (rr < 0 || rr >= SIZE || cc < 0 || cc >= SIZE) {
-                match = false;
-                break;
-              }
-              if (grid[rr][cc] !== word[i]) {
-                match = false;
-                break;
-              }
-            }
-            if (match) {
-              lastHighlightCells = [];
-              for (let i = 0; i < word.length; i++) {
-                const rr = r + dr * i,
-                  cc = c + dc * i;
-                const cell = document.querySelector(`.cell[data-r="${rr}"][data-c="${cc}"]`);
-                if (cell && !cell.classList.contains('found')) {
-                  cell.classList.add('highlight');
-                  lastHighlightCells.push(cell);
-                }
-              }
-              isHighlighting = true;
-              highlightTimeout = setTimeout(() => {
-                clearHighlight();
-              }, 3000); // Remove highlight after 3 seconds
-              return;
-            }
-          }
-        }
-      }
-    }
-
-    document.getElementById('helpButton').addEventListener('click', highlightRandomUnfoundWord);
   </script>
 </body>
 
