latest update link to level

--- a/Games/gamesMenu.html
+++ b/Games/gamesMenu.html
@@ -80,7 +80,7 @@
                     <a class="image fit"><img src="../images/wordsearch.png" alt="" /></a>
                     <h3>WORD SEARCH</h3>
                     <ul class="actions">
-                        <li><a href="./WordSearch/word_search.html" class="button">PLAY GAME</a></li>
+                        <li><a href="./WordSearch/ws_levels.html" class="button">PLAY GAME</a></li>
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
