month of july 30

--- a/index.html
+++ b/index.html
@@ -191,6 +191,29 @@
 						<li><a href="./pages/june30.html" class="button">Full Story</a></li>
 					</ul>
 				</article>
+				<article>
+					<header>
+						<span class="date">July 30, 2025</span>
+						<h2><a>Angels Pizza<br />Date Night</a></h2>
+					</header>
+					<a class="image fit"><img src="./images/image136.jpg" alt="" /></a>
+					<p>For our 7th monthsary, we kept it simple but special, we went to Angels Pizza and ordered their
+						famous "Sana All Jowa Package." Just us, good food, and moments that mattered. No fancy setup,
+						just real connection (and cheesy pizza, of course ).
+						While we were waiting for our food, we noticed a bit of *drama* unfolding, seems like the server
+						and the cashier were in a slight argument. You whispered, "Nag-aaway sila oh," and then pointed
+						out that the manager was just chilling at the back, looking like he was gaming. You judged
+						the poor guy so fast! But later, we realized… he was on break. Peace restored. Haha!
+						Eventually, we finished our food with happy (and very full) tummies. Then we headed home, and
+						yes,
+						I rushed to the CR as soon as we got there. Too much love... and too much pizza. Haha!
+						It may have been a chill date, but for me, it was one of those moments I’ll always
+						remember, because it was with you.</p>
+					<ul class="actions special">
+						<li><a href="./pages/july30.html" class="button">Full Story</a></li>
+					</ul>
+				</article>
+
 				<!-- <article>
 					<header>
 						<span class="date">April 7, 2017</span>
