--- a/pages/myLetters.html
+++ b/pages/myLetters.html
@@ -121,8 +121,15 @@
                     </ul>
                 </article>
                 <article class="col-6 col-12-xsmall work-item">
-                    <a class="image fit"><img src="../images/commingsoon.jpg" alt="" /></a>
+                    <a class="image fit"><img src="../images/monthsary7.png" alt="" /></a>
                     <h3>July 30, 2025</h3>
+                    <ul class="actions">
+                        <li><a href="./letters/letterJul30.html" class="button">Read Letter</a></li>
+                    </ul>
+                </article>
+                <article class="col-6 col-12-xsmall work-item">
+                    <a class="image fit"><img src="../images/commingsoon.jpg" alt="" /></a>
+                    <h3>August 30, 2025</h3>
                     <ul class="actions">
                         <li><a class="button">Comming Soon...</a></li>
                     </ul>
