--- a/pages/january30.html
+++ b/pages/january30.html
@@ -34,6 +34,7 @@
 				<li><a href="./myLetters.html">My Letters</a></li>
 				<li><a href="../Games/gamesMenu.html">Games</a></li>
 				<li><a href="./summaryOfUs.html">Summary of US</a></li>
+				<li><a href="../Inspiration/randomInspiration.html">Random Inspiration</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="https://www.facebook.com/muj.85256" class="icon brands fa-facebook-f"><span
